# world-and-self-model

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  README.md  constants.py  pyproject.toml  tasks.py
agi/: conscious_agent.py  main.py  memory.py  simulation.py
agi/hogwild/: conscious_agent.py  simulation.py
tests/component/: test_component_testing.py
tests/e2e/: test_e2e_testing.py
tests/integration/: test_integration_testing.py
tests/unit/: test_unit_testing.py
world_and_self_model/: conscious_agent.py  main.py  model.py  simulation.py
world_and_self_model/hogwild/: conscious_agent.py  interfaces.py  runners.py  simulation.py
