[tool.poetry]
name = "World-and-self model for RL agents"
version = "0.1.0"
description = "Experiment with self-conscious AI"
authors = ["Jan <jankapala@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
python-dotenv = "^1.0.1"
numpy = "^1.26.4"
tqdm = "^4.66.2"
torch = "^2.2.0"
torchmetrics = "^1.3.1"
gymnasium = {extras = ["box2d"], version = "^0.29.1"}
mlflow = "^2.10.2"
tensorboard = "^2.16.2"
psutil = "^5.9.8"
pynvml = "^11.5.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
hypothesis = "^6.88.1"
factory-boy = "^3.3.0"
pytest-xdist = "^3.3.1"
pytest-randomly = "^3.15.0"
pytest-mock = "^3.12.0"
coverage = {extras = ["toml"], version = "^7.3.2"}
pytest-cov = "^4.1.0"
black = "^23.10.1"
pre-commit = "^3.5.0"
invoke = "^2.2.0"
mypy = "^1.6.1"
isort = "^5.12.0"
pylint = "^3.0.2"
bandit = {extras = ["toml"], version = "^1.7.5"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
source = ["world_and_self_model"]
concurrency = ["multiprocessing"]

[tool.mypy]
ignore_missing_imports = true
strict = true

[tool.isort]
profile = "black"
line_length = 80

[tool.pylint]
max-line-length = 80
disable = ["fixme"]

[tool.black]
line-length = 80

[tool.pylint.master]
ignore-paths=["tests"]
